refactor: Reorganize documentation files into `docs/completed-plans` and `docs/uncompleted-plans` directories, and update `AGENTS.md` and `